@@ -1,8 +1,9 @@
 package com.LiqaaTech.Services.Impl;
 
 import com.LiqaaTech.DTOs.TicketDTO;
+import com.LiqaaTech.Entities.Event;
+import com.LiqaaTech.Entities.Registration;
 import com.LiqaaTech.Entities.Ticket;
-import com.LiqaaTech.Mappers.TicketMapper;
 import com.LiqaaTech.Repositories.TicketRepository;
 import com.LiqaaTech.Services.Interf.TicketService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,50 +11,87 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class TicketServiceImpl implements TicketService {
-
+    
     private final TicketRepository ticketRepository;
-    private final TicketMapper ticketMapper;
+    private static final String DEFAULT_STATUS = "ACTIVE";
 
     @Autowired
-    public TicketServiceImpl(TicketRepository ticketRepository, TicketMapper ticketMapper) {
+    public TicketServiceImpl(TicketRepository ticketRepository) {
         this.ticketRepository = ticketRepository;
-        this.ticketMapper = ticketMapper;
-    }
-
-    @Override
-    public TicketDTO createTicket(TicketDTO ticketDTO) {
-        Ticket ticket = ticketMapper.toEntity(ticketDTO);
-        Ticket savedTicket = ticketRepository.save(ticket);
-        return ticketMapper.toDTO(savedTicket);
-    }
-
-    @Override
-    public TicketDTO updateTicket(Long ticketId, TicketDTO ticketDTO) {
-        Ticket existingTicket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
-        
-        ticketMapper.updateEntityFromDTO(ticketDTO, existingTicket);
-        Ticket updatedTicket = ticketRepository.save(existingTicket);
-        return ticketMapper.toDTO(updatedTicket);
     }
 
     @Override
     public List<TicketDTO> getAllTickets() {
-        return ticketRepository.findAll().stream()
-                .map(ticketMapper::toDTO)
-                .collect(Collectors.toList());
+        return ticketRepository.findAll()
+                .stream()
+                .map(TicketDTO::new)
+                .toList();
     }
 
     @Override
-    public TicketDTO getTicketById(Long ticketId) {
-        Ticket ticket = ticketRepository.findById(ticketId)
+    public List<TicketDTO> getTicketsByUserId(Long userId) {
+        return ticketRepository.findByRegistrationUserId(userId)
+                .stream()
+                .map(TicketDTO::new)
+                .toList();
+    }
+
+    @Override
+    public List<TicketDTO> getTicketsByEventId(Long eventId) {
+        return ticketRepository.findByRegistrationEventId(eventId)
+                .stream()
+                .map(TicketDTO::new)
+                .toList();
+    }
+
+    @Override
+    public TicketDTO createTicket(TicketDTO ticketDTO) {
+        Ticket ticket = new Ticket();
+        Registration registration = new Registration();
+        registration.setId(ticketDTO.getRegistrationId());
+        ticket.setRegistration(registration);
+        
+        Event event = new Event();
+        event.setId(ticketDTO.getEventId());
+        ticket.setEvent(event);
+        
+        ticket.setTicketNumber(ticketDTO.getTicketNumber());
+        ticket.setTicketType(ticketDTO.getTicketType());
+        ticket.setPrice(ticketDTO.getPrice());
+        ticket.setStatus(ticketDTO.getStatus());
+        ticket.setTicketCode(ticketDTO.getTicketCode());
+        ticket.setIsUsed(ticketDTO.getIsUsed());
+        ticket.setUsedAt(ticketDTO.getUsedAt());
+        
+        if (ticket.getStatus() == null) {
+            ticket.setStatus(DEFAULT_STATUS);
+        }
+        
+        return new TicketDTO(ticketRepository.save(ticket));
+    }
+
+    @Override
+    public TicketDTO updateTicket(Long id, TicketDTO ticketDTO) {
+        Ticket existingTicket = ticketRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Ticket not found"));
-        return ticketMapper.toDTO(ticket);
+
+        Registration registration = new Registration();
+        registration.setId(ticketDTO.getRegistrationId());
+        existingTicket.setRegistration(registration);
+
+        existingTicket.setTicketNumber(ticketDTO.getTicketNumber());
+        existingTicket.setTicketType(ticketDTO.getTicketType());
+        existingTicket.setPrice(ticketDTO.getPrice());
+        existingTicket.setStatus(ticketDTO.getStatus());
+        existingTicket.setTicketCode(ticketDTO.getTicketCode());
+        existingTicket.setIsUsed(ticketDTO.getIsUsed());
+        existingTicket.setUsedAt(ticketDTO.getUsedAt());
+
+        return new TicketDTO(ticketRepository.save(existingTicket));
     }
 
     @Override
@@ -62,16 +100,21 @@ public class TicketServiceImpl implements TicketService {
     }
 
     @Override
-    public List<TicketDTO> getTicketsByEventId(Long eventId) {
-        return ticketRepository.findByEventId(eventId).stream()
-                .map(ticketMapper::toDTO)
-                .collect(Collectors.toList());
+    public TicketDTO getTicketById(Long ticketId) {
+        return new TicketDTO(ticketRepository.findById(ticketId)
+                .orElseThrow(() -> new RuntimeException("Ticket not found")));
     }
 
     @Override
-    public List<TicketDTO> getTicketsByUserId(Long userId) {
-        return ticketRepository.findByUserId(userId).stream()
-                .map(ticketMapper::toDTO)
-                .collect(Collectors.toList());
+    public void cancelTicket(Long ticketId) {
+        Ticket ticket = getTicketById(ticketId).getTicket();
+        if (ticket == null) {
+            throw new RuntimeException("Ticket not found");
+        }
+        if (ticket.getStatus().equals("CANCELLED")) {
+            throw new RuntimeException("Ticket already cancelled");
+        }
+        ticket.setStatus("CANCELLED");
+        ticketRepository.save(ticket);
     }
 }
